[tool.poetry]
name = "pcax"
version = "0.6.0"
description = "A library for efficient Predictive Coding networks"
authors = ["Luca Pinchetti <luca.pinchetti@cs.ox.ac.uk>"]
license = "Propriaetary. Confidential. No part of this work can be disclosed or shared without the explicit consent of the authors."
readme = "README.md"

[[tool.poetry.source]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
jax = {extras = ["cuda12"], version = "^0.4.28"}
optax = "0.*"
equinox = "0.*"

[tool.poetry.group.examples.dependencies]
numpy = "1.*"
torch = {version = "2.*", source = "torch-cpu"}
torchvision = {version = "0.*", source = "torch-cpu"}
optuna = "3.*"
tqdm = "4.*"
scikit-learn = "1.*"
matplotlib = "3.*"
seaborn = "0.*"
jupyter = "1.*"

[tool.poetry.group.dev.dependencies]
black = "23.*"
mypy = "1.*"
pytest = "8.*"
tox = "4.*"
isort = "5.*"
flake8 = "7.*"
pytest-cov = "5.*"

[tool.pytest.ini_options]
addopts = "--cov=pcax"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "pcax"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length = 120
