[metadata]
name = pcax
version = 0.0.1
description = Run Predictive coding in JAX
author = Luca Pinchetti
license = GNU
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires = file: requirements/requirements.txt
python_requires = >=3.8
package_dir =
    = pcax
zip_safe = no

[options.extras_require]
testing = file: requirements/requirements-dev.txt

[options.package_data]
slapping = py.typed

[flake8]
ignore = D100,D104,D105,D200,D401,E203,W503,D101,D102,D103,D107
max-line-length = 120
exclude =
  .git
  __pycache__
  docs
  build
  dist
  venv
