[metadata]
name = pcx
version = 0.6.2.post0
description = Run Predictive Coding Networks in JAX
author = Luca Pinchetti
license = GNU
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
install_requires = file: requirements/requirements.txt
python_requires = >=3.10
package_dir =

zip_safe = no

[options.extras_require]
testing = file: requirements/requirements-dev.txt

[options.package_data]
slapping = py.typed
