[tool.poetry]
name = "pc-decoder"
version = "0.1.0"
description = "Predictive Coding implementation of a Decoder part of an AutoEncoder"
authors = ["Oleh Lokshyn <olokshyn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
optax = "^0.1.5"
equinox = "^0.10.10"
tox = "^4.6.4"
isort = "^5.12.0"
ipython = "^8.14.0"
scikit-learn = "^1.3.0"
tqdm = "^4.65.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
wandb = "^0.15.5"
ray = {extras = ["tune"], version = "^2.5.1"}
optuna = "^3.2.0"
numpy = "~1.24"
gputil = "^1.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
